<resources>
    <string name="app_name">Арабский словарь</string>
    <string name="common_error">Во время выполнения действия произошла ошибка.</string>
    <string name="please_wait">Пожалуйста, подождите</string>
    <string name="arabic_text">Арабский текст</string>
    <string name="translation">Перевод</string>
    <string name="article_id">Id статьи</string>
    <string name="short_text">Короткий текст</string>
    <string name="done">Готово</string>
    <string name="send">Отправить</string>
    <string name="fill_this_field">Заполните это поле</string>
    <string name="edit">Редактировать</string>
    <string name="notification_title">Заголовок уведомления</string>
    <string name="test_request">Тестовый запрос</string>
</resources>
